2001-06-25  Erez Zadok  <ezk@shekel.mcl.cs.columbia.edu>

	* LSM.am-utils, NEWS, README.y2k, ChangeLog: make sure all
	am-utils URL references use www.am-utils.org, not the columbia
	URL.

2001-06-08  Erez Zadok  <ezk@shekel.mcl.cs.columbia.edu>

	* conf/transp/transp_sockets.c (create_nfs_service): cast to
	u_long to ensure clean compile on freebsd5 and bsdi2.

2001-05-23  Ion Badulescu  <ionut@moisil.badula.org>

	WARNING: WORK IN PROGRESS

	It works for me on Linux (both autofs and nfs mounts), for nfs and
	link, but I won't make any guarantees outside those.

	* amd/mntfs.c (find_mntfs): reuse the mntfs only if both the mount
	point and the device/fileserver are the same. This is an important
	change of philosophy, watch out for memory leaks!

	* amd/map.c (get_ap_child): helper function for
	amfs_auto_lookuppn, creates a new am_node for key fname, inits it,
	and inserts it into all necessary structures

	* amd/amfs_auto.c (free_continuation): free unused mntfs's; don't
	free any of the removed fields
	(amfs_auto_lookuppn, amfs_auto_bgmount): split lookuppn into three
	subfunctions, including some code stolen from bgmount; lookuppn
	now generates an array of possible mntfs to try mounting, and
	bgmount will actually try to mount each of them.
	(amfs_auto_lookuppn[123]): the three new subfunctions for lookuppn
	(amfs_parse_defaults): new helper function for lookuppn

2001-05-19  Erez Zadok  <ezk@kosh.dyn.optonline.net>

	* conf/mount/mount_linux.c: typo: added comma after '0' element.

2001-05-19  Ion Badulescu  <ionut@moisil.dev.hydraweb.com>

	* conf/autofs/autofs_linux.c (AUTOFS_MAX_VERSION): allow using
	autofs-v4 again
	(autofs_get_opts): don't pass pgrp, the kernel will get it
	automatically anyway, not to mention that we were passing bogus
	data if amd was not daemonized.

	* conf/mount/mount_linux.c (linux_nfs_error): don't special case
	the 0 result, just put it into the translation list

2001-05-19  Ion Badulescu  <ionut@moisil.dev.hydraweb.com>
